--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t babblegrabble/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run babblegrabble/docker-react npm run test -- --coverage
+  - docker run -e CI=true babblegrabble/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
@@ -17,3 +17,6 @@ deploy:
   bucket_path: "docker-react"
   on:
     branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
